--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_custom_three_buttons.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_custom_three_buttons.xml
@@ -100,7 +100,7 @@
                 />
                     
                     
-                    <Button
+                    <product.clicklabs.jugnoo.driver.utils.CustomButtonView
                         android:id="@+id/btnCancel"
                         android:layout_width="180px"
                         android:layout_height="83px"
