--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_ride_details.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_ride_details.xml
@@ -531,7 +531,7 @@
                     android:textColor="@color/grey_ride_history"
                     android:textSize="52px"/>
 
-                <TextView
+                <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
                     android:id="@+id/textViewAccountBalanceText"
                     android:layout_width="345px"
                     android:layout_height="wrap_content"
