--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_ride_request_timeout.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_ride_request_timeout.xml
@@ -67,12 +67,11 @@
             android:layout_marginTop="32px"
             android:background="@drawable/new_orange_btn_top_normal_bottom_rounded">
 
-            <TextView
+            <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
                 android:id="@+id/timeOutText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="32px"
-                android:singleLine="true"
                 android:text="@string/time_left"
                 android:textColor="@drawable/white_color_selector"
                 android:textSize="@dimen/button_text_size"
