--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_earn.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_earn.xml
@@ -42,7 +42,7 @@
                     android:background="@drawable/referral_box">
 
 
-                    <TextView
+                    <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
                         android:id="@+id/textViewReferralCodeDisplay"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -51,7 +51,6 @@
                         android:layout_marginRight="20px"
                         android:layout_marginTop="15px"
                         android:gravity="center"
-                        android:singleLine="true"
                         android:text="@string/your_referral_code"
                         android:textColor="@color/black"
                         android:textSize="36px"
