--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_driver_request.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_driver_request.xml
@@ -121,7 +121,7 @@
                     android:textSize="@dimen/button_text_size"
                     />
 
-                <Button
+                <product.clicklabs.jugnoo.driver.utils.CustomButtonView
                     android:id="@+id/buttonCancelRide"
                     android:layout_width="200px"
                     android:layout_height="69px"
