--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_language.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_language.xml
@@ -38,15 +38,33 @@
                 android:textSize="48px" />
         </RelativeLayout>
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="140px"
+            android:layout_height="140px"
+            android:layout_centerInParent="true"
+            />
+
         <ListView
-            android:id="@+id/languageList"
+            android:id="@+id/listView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="90px"
             android:divider="@drawable/transparent"
             android:dividerHeight="0px"
+            android:layout_below="@+id/topRl"
+            android:listSelector="@drawable/transparent"
             android:splitMotionEvents="false" >
         </ListView>
+
+        <TextView
+            android:id="@+id/textViewInfoDisplay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:text="@string/no_missed_rides_currently"
+            android:textColor="@color/black"
+            android:textSize="@dimen/button_text_size" />
     </RelativeLayout>
 
 </LinearLayout>
