--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
@@ -34,11 +34,13 @@
             <!--android:textSize="40px"/>-->
 
        <LinearLayout
+           android:id="@+id/selectLanguageLl"
            android:layout_width="380px"
            android:layout_height="80px"
            android:layout_alignParentRight="true"
            android:layout_marginTop="3px"
            android:layout_marginRight="5px"
+           android:visibility="gone"
            android:background="@drawable/background_white_rounded_orange_bordered">
 
 
