--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_language.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_language.xml
@@ -2,19 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/relative"
     android:layout_width="720px"
-    android:layout_height="110px"
+    android:layout_height="120px"
     android:orientation="vertical"
         android:splitMotionEvents="false"
      >
 
     <RelativeLayout
+        android:id="@+id/languagePrefRl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:splitMotionEvents="false"
-        
-        
-        >
+        android:splitMotionEvents="false">
         
 
         <TextView
@@ -22,28 +20,29 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="English"
-            android:textColor="@color/bg_grey_opaque"
-            android:textSize="36px"
+            android:textColor="@color/grey_dark"
+            android:textSize="42px"
+            android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="20px"
             android:singleLine="true"
              />
         
         
-        <ImageView 
-            android:id="@+id/tick"
-            android:layout_width="80px"
-            android:layout_height="80px"
-            android:tag="mwar"
-            android:src="@drawable/check_off"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="20px"
-            />
+        <!--<ImageView -->
+            <!--android:id="@+id/tick"-->
+            <!--android:layout_width="80px"-->
+            <!--android:layout_height="80px"-->
+            <!--android:tag="mwar"-->
+            <!--android:src="@drawable/check_off"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_marginRight="20px"-->
+            <!--/>-->
         
         <ImageView 
             android:layout_width="match_parent"
-            android:layout_height="1px"
+            android:layout_height="2px"
             android:background="@color/favorite_div"
             android:layout_alignParentBottom="true"
             />
